调整管理工具